--- a/Accubow/Base.lproj/Main.storyboard
+++ b/Accubow/Base.lproj/Main.storyboard
@@ -9,6 +9,26 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Popover-->
+        <scene sceneID="bAv-NO-ns2">
+            <objects>
+                <viewController restorationIdentifier="TrainingPopoverMenuID" storyboardIdentifier="TrainingPopoverMenuID" title="Popover" id="9ds-LM-mgA" customClass="TrainingPopoverMenuController" customModule="Accubow" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Bvh-vd-Z2X"/>
+                        <viewControllerLayoutGuide type="bottom" id="7fN-1O-Pw2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="k57-wW-wIz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="560"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="560"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="09V-Pa-bz1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="102" y="-493"/>
+        </scene>
         <!--Menu View Controller-->
         <scene sceneID="8vz-4k-sSY">
             <objects>
@@ -41,11 +61,11 @@
                                         <rect key="frame" x="0.0" y="28" width="240" height="48"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="feK-GM-llK" id="GMj-4y-URl">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="47"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="48"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YTM-B6-r3z">
-                                                    <rect key="frame" x="0.0" y="3" width="240" height="44"/>
+                                                    <rect key="frame" x="0.0" y="3" width="239" height="44"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </searchBar>
@@ -56,7 +76,7 @@
                                         <rect key="frame" x="0.0" y="76" width="240" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mz6-ka-he8" id="q1c-lt-Bbk">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="79"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iae-Gp-kt7">
@@ -152,7 +172,7 @@
                                         <rect key="frame" x="0.0" y="156" width="240" height="165"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xQc-HP-J6K" id="lbq-F5-qCr">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="164"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="165"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -160,7 +180,7 @@
                                         <rect key="frame" x="0.0" y="321" width="240" height="165"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OhP-z3-ZQb" id="ALe-qe-7AM">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="164"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="165"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -168,7 +188,7 @@
                                         <rect key="frame" x="0.0" y="486" width="240" height="165"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qwg-Dg-Bhi" id="CJW-Rn-IYN">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="164"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="165"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
